try z-index fix

--- a/style.css
+++ b/style.css
@@ -253,4 +253,5 @@ hr {
   margin-bottom: 1rem;
   margin-top: 0.5rem;
   font-family: "Jacques Francois Shadow", cursive;
+  z-index: 1;
 }
