--- a/style1.css
+++ b/style1.css
@@ -3,7 +3,7 @@ body {
 }
 
 .banner {
-  width: 100%;
+  /* width: 100%; */
   height: 50vh;
   text-align: center;
   overflow: hidden;
@@ -19,6 +19,7 @@ body {
   transform-style: preserve-3d;
   transform: perspective(1000px);
   animation: autoRun 20s linear infinite;
+  z-index: -1;
 }
 
 @keyframes autoRun {
@@ -41,14 +42,13 @@ body {
 }
 
 .banner .slider .item img {
-  width: 100%;
   height: 100%;
   object-fit: cover;
   z-index: -1;
 }
 
 img {
-  /* opacity: 0.4; */
+  opacity: 0.4;
   filter: brightness(1.5);
 }
 
